data/derived/comb/progs/unify/prog0541.ml.out
Characters 8-10:
  let _ = tr.[2];;
          ^^
Error: This expression has type int list
       but an expression was expected of type string
